# oodssistant

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/bark/: api.rs  builder.rs  client.rs  mod.rs  payload.rs
src/brain/: event.rs  mod.rs  pages.rs
src/brain/test/: homepage.rs
src/gcal/: client.rs  frontend.rs  login.rs  mod.rs  notes.md
src/gcal/api/: error.rs  mod.rs  request.rs
src/gcal/api/endpoints/: calendar_list.rs  colors.rs  events.rs  mod.rs
src/server/: builder.rs  handlers.rs  mod.rs
src/server/interface/: bridge.rs  elements.rs  mod.rs  redirect.rs
src/server/interface/page/: basic.rs  mod.rs  page_type.rs  para.rs  template.rs
