[package]
name = "oodssistant"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
bon_macro = { version = "0.1.0", path = "../restman-rs/bon_macro" }
chrono = { version = "0.4.44", features = ["serde"] }
oauth2 = "5.0.0"
reqwest = "0.13.4"
restman-rs = { version = "0.1.0", path = "../restman-rs", features = ["reqwest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = { version = "3.20.0", features = ["macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
warp = { version = "0.4.3", features = ["server"] }
uuid = { version = "1.4", features = ["v4"] }
async-trait = "0.1.89"
